# learnplay-ai

./: .gitignore  PLAN.md  README.md  SETUP.md  UI_ENHANCEMENT_PLAN.md  doppler.yaml  package.json
.github/: copilot-instructions.md
.github/workflows/: smoke.yml
agent/: chess_tools.py  langgraph.json  llm_provider.py  main.py  pyproject.toml  sudoku_tools.py  tts_service.py  voice_tools.py
agent/agents/: __init__.py  router_agent.py
agent/agents/chess/: __init__.py  agent.py  prompts.py  state.py  tools.py
agent/agents/sudoku/: __init__.py  agent.py  prompts.py  state.py  tools.py
agent/shared/: __init__.py  base_state.py  teaching_tools.py  tts_service.py  voice_tools.py
docs/: AGENT_ARCHITECTURE_RECOMMENDATIONS.md  AI_TEACHING.md  CHESS_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  SECURITY_AUDIT.md  SETUP.md  SUDOKU_GUIDE.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/chess/: page.tsx
src/app/sudoku/: page.tsx
src/components/: TeachingControls.tsx  TeachingProgress.tsx  VoiceControls.tsx  moon.tsx  proverbs.tsx
src/components/chat/: ActionButtonGroup.tsx  AnalysisCard.tsx  CellBadge.tsx  CellSelectionQuiz.tsx  HintCard.tsx  InfoCard.tsx  InlineTeachingProgress.tsx  MoveCard.tsx  MoveSelectionQuiz.tsx  NumberPickerQuiz.tsx  OpeningCard.tsx  SquareBadge.tsx  StrategyBadge.tsx  StrategyQuiz.tsx  ThinkingIndicator.tsx  index.ts
src/components/chess/: ChessBoard.tsx  ChessGame.tsx  ChessGameWithAgent.tsx  ChessQuickActions.tsx  ChessTeachingProgress.tsx  GameControls.tsx  (+1 more)
src/lib/: types.ts
src/types/: speech-recognition.d.ts
(+17 files in other folders)
