[project]
name = "learnplay-ai"
version = "0.1.0"
description = "AI-powered game learning platform with interactive tutoring"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.2.0",
    "langgraph==1.0.5",
    "langsmith>=0.4.49",
    "openai>=1.68.2,<2.0.0",
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "copilotkit>=0.1.74",
    "langgraph-api>=0.6.0",
    "requests>=2.31.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W293", "W291", "E722"]
